Initial demo files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,10 @@
     "name": "Python 3",
     "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
 
+    "features": {
+        "ghcr.io/devcontainers/features/azure-cli:latest": {},
+        "ghcr.io/azure/azure-dev/azd:latest": {}
+    },
     // Configure tool-specific properties.
     "customizations": {
         // Configure properties specific to VS Code.
@@ -11,11 +15,7 @@
             // Set *default* container specific settings.json values on container create.
             "settings": {
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
-                "python.testing.pytestEnabled": true,
-                "python.testing.unittestEnabled": false,
                 "files.exclude": {
-                    ".coverage": true,
-                    ".pytest_cache": true,
                     "__pycache__": true
                 }
             },
@@ -33,7 +33,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "pip3 install --user -r requirements-dev.txt && pre-commit install",
+    "postCreateCommand": "pip3 install --user -r requirements-dev.txt",
 
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
     "remoteUser": "vscode"
