--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,9 @@
 [tool.ruff]
 line-length = 120
 target-version = "py311"
-select = ["E", "F", "I", "UP"]
-ignore = ["D203"]
+lint.select = ["E", "F", "I", "UP"]
+lint.ignore = ["D203"]
 
 [tool.black]
 line-length = 120
 target-version = ["py311"]
-
-[tool.pytest.ini_options]
-addopts = "-ra --cov"
-testpaths = ["tests"]
-pythonpath = ['.']
-
-[tool.coverage.report]
-show_missing = true
