Add llamaindex example

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ openai
 python-dotenv
 langchain
 langchain-openai
+llama-index-llms-azure-openai
+llama-index-llms-openai
+llama-index-llms-openai-like
