--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -20,6 +20,6 @@ jobs:
             python -m pip install --upgrade pip
             pip install -r requirements-dev.txt
         - name: Lint with ruff
-          run: ruff .
+          run: ruff check .
         - name: Check formatting with black
           run: black . --check --verbose
