--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# API_HOST can be either azure, ollama, or openai:
+# API_HOST can be either azure, ollama, openai, or github:
 API_HOST=azure
 # Needed for Azure:
 AZURE_OPENAI_ENDPOINT=https://YOUR-AZURE-OPENAI-SERVICE-NAME.openai.azure.com
@@ -6,7 +6,10 @@ AZURE_OPENAI_DEPLOYMENT=YOUR-AZURE-DEPLOYMENT-NAME
 AZURE_OPENAI_VERSION=2024-03-01-preview
 # Needed for Ollama:
 OLLAMA_ENDPOINT=http://localhost:11434/v1
-OLLAMA_MODEL=llama2
+OLLAMA_MODEL=llama3.1
 # Needed for OpenAI.com:
 OPENAI_KEY=YOUR-OPENAI-KEY
 OPENAI_MODEL=gpt-3.5-turbo
+# Needed for GitHub models:
+GITHUB_MODELS_ENDPOINT="https://models.inference.ai.azure.com"
+GITHUB_MODELS_MODEL=gpt-4o
