--- a/.env.sample
+++ b/.env.sample
@@ -11,5 +11,4 @@ OLLAMA_MODEL=llama3.1
 OPENAI_KEY=YOUR-OPENAI-KEY
 OPENAI_MODEL=gpt-3.5-turbo
 # Needed for GitHub models:
-GITHUB_MODELS_ENDPOINT="https://models.inference.ai.azure.com"
-GITHUB_MODELS_MODEL=gpt-4o
+GITHUB_MODEL=gpt-4o
