--- a/.devcontainer/ollama/devcontainer.json
+++ b/.devcontainer/ollama/devcontainer.json
@@ -25,8 +25,13 @@
     },
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "pip3 install --user -r requirements-dev.txt && cp .env.sample.ollama .env",
+    "postCreateCommand": "pip3 install --user -r requirements-dev.txt && cp .env.sample.ollama .env && ollama pull llama3.1",
 
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "vscode"
+    "remoteUser": "vscode",
+
+    // Required to handle Ollama models
+    "hostRequirements": {
+        "memory": "64gb"
+    }
 }
