--- a/.devcontainer/github/devcontainer.json
+++ b/.devcontainer/github/devcontainer.json
@@ -2,7 +2,10 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.245.0/containers/python-3
 {
     "name": "python-openai-demos (GitHub models)",
-    "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "context": ".."
+    },
     "features": {
     },
     // Configure tool-specific properties.
@@ -16,15 +19,13 @@
 
             // Add the IDs of extensions you want installed when the container is created.
             "extensions": [
-                "ms-python.python",
-                "charliermarsh.ruff",
-                "ms-python.black-formatter"
+                "ms-python.python"
             ]
         }
     },
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "pip3 install --user -r requirements-dev.txt && cp .env.sample.github .env",
+    "postCreateCommand": "cp .env.sample.github .env",
 
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
     "remoteUser": "vscode"
