--- a/.devcontainer/github/devcontainer.json
+++ b/.devcontainer/github/devcontainer.json
@@ -3,8 +3,8 @@
 {
     "name": "python-openai-demos (GitHub models)",
     "build": {
-        "dockerfile": "Dockerfile",
-        "context": ".."
+        "dockerfile": "../Dockerfile",
+        "context": "../.."
     },
     "features": {
     },
