--- a/.github/workflows/test-github-models.yaml
+++ b/.github/workflows/test-github-models.yaml
@@ -1,4 +1,4 @@
-name: Test GitHub Models
+name: Test example files are working with GitHub models
 
 on:
   push:
@@ -8,7 +8,6 @@ on:
     # Also run when chat.py files are modified
     paths:
       - 'chat.py'
-      - 'reasoning.py'
       - 'spanish/chat.py'
       - 'requirements.txt'
       - '.github/workflows/test-github-models.yaml'
@@ -18,6 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    strategy:
+      matrix:
+        python_file:
+          - "chat.py"
+          - "spanish/chat.py"
 
     steps:
       - uses: actions/checkout@v5
@@ -25,27 +29,21 @@ jobs:
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version-file: "pyproject.toml"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv pip install -r requirements.txt
+        env:
+          UV_SYSTEM_PYTHON: 1
 
-      - name: Test main chat.py with GitHub Models
+      - name: Test ${{ matrix.python_file }} with GitHub Models
         env:
           API_HOST: github
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_MODEL: openai/gpt-4o-mini
         run: |
-          echo "Testing main chat.py file..."
-          python chat.py
-
-      - name: Test Spanish chat.py with GitHub Models
-        env:
-          API_HOST: github
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_MODEL: openai/gpt-4o-mini
-        run: |
-          echo "Testing Spanish chat.py file..."
-          python spanish/chat.py
+          python ${{ matrix.python_file }}
