--- a/.github/workflows/test-github-models.yaml
+++ b/.github/workflows/test-github-models.yaml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          uv venv .venv
           uv pip install -r requirements.txt
 
       - name: Test chat files with GitHub Models
@@ -39,8 +40,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_MODEL: openai/gpt-4o-mini
         run: |
+          source .venv/bin/activate
           files=("chat.py" "spanish/chat.py")
           for file in "${files[@]}"; do
             echo "Testing $file..."
-            python "$file" || exit 1
+            uv python "$file" || exit 1
           done
