--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -15,11 +15,15 @@ jobs:
           uses: actions/setup-python@v5
           with:
             python-version: "3.11"
-        - name: Install dependencies
+        - name: Install uv
+          uses: astral-sh/setup-uv@v6
+        - name: Set up virtual environment and install dependencies
           run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements-dev.txt
+            uv venv .venv
+            uv pip install -r requirements-dev.txt
         - name: Lint with ruff
-          run: ruff check .
+          run: |
+            uv run ruff check .
         - name: Check formatting with black
-          run: black . --check --verbose
+          run: |
+            uv run black . --check --verbose
