Port to OpenAI vs Azure OpenAI, port infra

--- a/.env.sample.azure
+++ b/.env.sample.azure
@@ -1,5 +1,4 @@
 # See .env.sample for all options
 API_HOST=azure
-AZURE_OPENAI_ENDPOINT=https://YOUR-AZURE-OPENAI-SERVICE-NAME.openai.azure.com
-AZURE_OPENAI_DEPLOYMENT=YOUR-AZURE-DEPLOYMENT-NAME
-AZURE_OPENAI_VERSION=2024-03-01-preview
+AZURE_OPENAI_ENDPOINT=https://YOUR-AZURE-OPENAI-SERVICE-NAME.openai.azure.com/openai/v1
+AZURE_OPENAI_CHAT_DEPLOYMENT=YOUR-AZURE-DEPLOYMENT-NAME
